<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lytOrderList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_shadow"
    android:padding="@dimen/margin_10dp">

    <RelativeLayout
        android:id="@+id/lyt_order1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingBottom="@dimen/margin_5dp">

        <TextView
            android:id="@+id/tvCustomerOrderNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/order_no"
            android:textColor="@color/black"
            android:textSize="@dimen/mid_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCustomerOrderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/order_date"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="@dimen/p_text_size"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_below="@+id/lyt_order1"
        android:background="@color/light_gray" />

    <RelativeLayout
        android:id="@+id/lyt_order2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginBottom="@dimen/dimen_3dp">

        <TextView
            android:id="@+id/tvCustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:drawableStart="@drawable/ic_small_profile"
            android:drawablePadding="@dimen/margin_5dp"
            android:drawableTint="@color/gray_blue"
            android:text="@string/customer_name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            app:cardBackgroundColor="@color/delivered_status_bg"
            app:cardCornerRadius="@dimen/margin_5dp">

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="@dimen/margin_15dp"
                android:paddingEnd="@dimen/margin_15dp"
                android:text="@string/status"
                android:textColor="@color/status_text"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lyt_order3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyt_order2"
        android:layout_marginTop="@dimen/dimen_3dp"
        android:layout_marginBottom="@dimen/dimen_3dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCustomerMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:drawableStart="@drawable/ic_small_call"
            android:drawablePadding="@dimen/margin_5dp"
            android:drawableTint="@color/gray_blue"
            android:text="@string/mobile_no" />


        <TextView
            android:id="@+id/tvCustomerPaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingEnd="@dimen/margin_10dp"
            android:text="@string/order_method"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>